# tech-challenge-embrapa

./: README.md
fase1/: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  TechChallenge.txt  comandos.txt  create_db.py  docker-compose.yml  embrapa.db  embrapa_endpoint.txt  estrutura.txt  estutura_projeto.txt  pyproject.toml  requirements.txt
fase1/app/: main.py
fase1/app/api/v1/: api.py
fase1/app/api/v1/docs/: embrapa.py  responses.py
fase1/app/api/v1/endpoints/: scraping.py
fase1/app/core/: exceptions.py  security.py
fase1/app/core/middleware/: docs_auth.py
fase1/app/crud/: scraping.py
fase1/app/db/: session.py
fase1/app/docs/diagramas/: arquitetura_macro.md  componentes.md  fluxos.md  rotas.md  sequencia.md
fase1/app/models/: scraping.py
fase1/app/schemas/: scraping.py
fase1/app/scraping/: bs4_scraper.py  exportacao.py  importacao.py
fase1/app/scraping/mok/: opt_05.html  opt_06.html
fase1/app/tests/: test_auth.py  test_routes.py  test_scraping.py
fase1/db_data/: embrapa.db
